faq - update questions

--- a/faq.html
+++ b/faq.html
@@ -6,10 +6,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
-  <title>FAQ | Agropartnerships | A Digital Platform for Agribusiness</title>
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." name="description">
-  <meta content="FAQ | Agropartnerships | A Digital Platform for Agribusiness" property="og:title">
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." property="og:description">
+  <title>FAQ | Patrick's Foods - The Healthy Food Stack</title>
+  <meta content="" name="description">
+  <meta content="FAQ | Patrick's Foods - The Healthy Food Stack" property="og:title">
+  <meta content="" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
@@ -59,44 +59,50 @@
       </div>
     </div>
     <div class="menu">
-      <div class="menu-content">
-        <div class="menu-close" data-ix="close-menu"></div>
-        <div>
-          <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
-            <h6>Home</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="about.html" class="menu-link w-inline-block header-menu">
-            <h6>About</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="why-agropartnerships.html" class="menu-link w-inline-block header-menu">
-            <h6>WHY AGROPARTNERSHIPS</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="investments.html" class="menu-link w-inline-block header-menu">
-            <h6>FARMS/COMMODITIES</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="faq.html" class="menu-link w-inline-block header-menu">
-            <h6>FAQ</h6>
-          </a>
-          <div class="menu-divider menu-pop"></div>
-          <a href="help-desk.html" class="menu-link w-inline-block header-menu">
-            <h6>Help desk</h6>
-          </a>
+        <div class="menu-content">
+          <div class="menu-close" data-ix="close-menu"></div>
+          <div>
+            <a href="index.html" class="menu-link w-inline-block header-menu" data-page="index">
+              <h6>Home</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="about.html" class="menu-link w-inline-block header-menu">
+              <h6>About</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="our-focus.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Focus</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="products.html" class="menu-link w-inline-block header-menu">
+              <h6>Our Products</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="faq.html" class="menu-link w-inline-block header-menu">
+              <h6>FAQ</h6>
+            </a>
+            <div class="menu-divider menu-pop"></div>
+            <a href="contact.html" class="menu-link w-inline-block header-menu">
+              <h6>Contact Us</h6>
+            </a>
+          </div>
+          <div class="menu-footer">
+            <p class="smallest-paragraph grey-text">
+              <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
+              <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br>
+              <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
+              <!-- <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a> -->
+            </p>
+            <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false"
+                src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+              <script type="text/javascript">
+                document.write(new Date().getFullYear());
+              </script> Patrick's Foods. All Rights Reserved
+            </p>
+          </div>
         </div>
-        <div class="menu-footer">
-          <p class="smallest-paragraph grey-text">
-            <a href="tel:+2348098111113" class="menu-sub-link">0809-811-1113</a><br>
-            <a href="tel:+2348098111114" class="menu-sub-link">0809-811-1114</a><br> 
-            <a href="tel:+2349030000395" class="menu-sub-link">0903-000-0395</a><br>
-            <a href="cdn-cgi/l/email-protection.html#a4cdcac2cbe4c5c3d6cbd4c5d6d0cac1d6d7cccdd4d78ac7cbc99bd7d1c6cec1c7d099e1cad5d1cdd6cdc1d7819694e2d6cbc9819694f3c1c6d7cdd0c1" class="menu-sub-link"><span class="__cf_email__" data-cfemail="5d34333b321d3c3a2f322d3c2f2933382f2e35342d2e733e3230">[email&#160;protected]</span></a></p>
-          <p class="smallest-paragraph grey-text top-padding">© <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">document.write(new Date().getFullYear());</script> Farmforte. All Rights Reserved</p>
-        </div>
+        <div class="menu-lightbox" data-ix="close-menu"></div>
       </div>
-      <div class="menu-lightbox" data-ix="close-menu"></div>
-    </div>
     <div class="header-flex">
       <div class="menu-button" data-ix="open-menu">
         <div class="menu-line"></div>
@@ -134,20 +140,20 @@
     </div>
     <div class="faq-section">
       <div class="faq-category-block">
-        <h4>The <br>Program</h4>
+        <h4>The <br>Company</h4>
         <div class="active-section"></div>
       </div>
       <div class="faq-body page">
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>How do I join?</h5>
+            <h5>Question One</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>Simply <a href="sign-up-2.html" target="_blank">create an account</a>, select any number of units in farms or commodity trades you are interested in, make payments and we would get you started.<br></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ea sit rem ipsum excepturi molestiae odit autem nulla mollitia doloribus? Consectetur nam nobis at tempore illo, velit vero omnis. Suscipit!<br></p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -158,14 +164,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>What&#x27;s the duration?</h5>
+            <h5>Question Two</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>The program cycle is dependent on the specific farm or commodity trade type. It could range from as early as 3 weeks to 4 months for commodity trades and from 3 months to 9 months for farms.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, non? Eius delectus cupiditate unde recusandae maiores deserunt ullam ipsum pariatur molestiae, corporis sit soluta laudantium vel aperiam. Velit, doloremque repellat?</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -176,14 +182,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>Minimum and maximum</h5>
+            <h5>Question 3</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>The minimum number of unit is one. Participants can take as many units available at any given time.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fugiat laboriosam doloribus, aspernatur exercitationem ipsum assumenda, quibusdam laborum quod expedita amet dolore illo fuga, facilis enim esse dolorum deleniti veritatis.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -194,14 +200,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>Are farms and trades insured?</h5>
+            <h5>Question 4</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>Yes, both farms and commodities are comprehensively insured. The farms are insured to mitigate against any form of crop losses from fire, lightning, aircraft, windstorm damage, flood, outbreak of pests and diseases etc. For commodity trades, we have a comprehensive Goods in transit and warehouse insurance against burglary, fire or other unforeseen events. However, the expertise we deploy and the quality of our experience serve as a more guaranteed insurance.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quaerat repudiandae esse unde aliquid? Explicabo quisquam illum laboriosam deserunt illo nemo ducimus officiis. Sed, earum assumenda. Eos ipsa possimus odit.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -214,20 +220,20 @@
     </div>
     <div class="faq-section">
       <div class="faq-category-block">
-        <h4>Finance &amp; <br>Returns</h4>
+        <h4>Purchase &amp; <br>Returns</h4>
         <div class="active-section"></div>
       </div>
       <div class="faq-body page">
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>How much is a unit and what does it cover?</h5>
+            <h5>Question 1</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>The cost of a unit varies depending on the agribusiness case. It would cover all that is required to execute from start to finish.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eaque excepturi voluptas sequi aliquid cum autem est sint dicta nihil fugiat pariatur quas, laudantium voluptatum, vel maxime fugit illum mollitia.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -238,14 +244,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>How are the returns calculated?</h5>
+            <h5>Question 2</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>For farms, the returns are calculated by multiplying the projected yield per unit by the predetermined price per KG of the crop type. For commodity trades, the returns are calculated by a sharing formula that assigns a percentage of predetermined profit projections.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla, quibusdam error illum, consequatur iste necessitatibus delectus doloribus voluptatem voluptatum natus, libero pariatur atque et quos nam. Impedit sit quae cumque.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -256,14 +262,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>What is the predetermined price and how is it arrived at?</h5>
+            <h5>Question 3</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>The predetermined price is the price we use in the buyout contract. The price is arrived at by using a metric system tied to existing market prices and costs of production or costs of sourcing for the given period.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto possimus illo minus dignissimos perspiciatis id. Qui sapiente dicta nostrum repudiandae fugiat ab commodi quaerat similique, molestias eaque, maxime odio quia.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -274,14 +280,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>How much do I get at the end of a cycle?</h5>
+            <h5>Question 4</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>At the end of a cycle, you get your capital and a return on investment specific to your agribusiness case.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex aperiam aspernatur optio, omnis dolorem atque unde rerum reiciendis similique. A iste veritatis praesentium nisi eligendi sed odit incidunt, similique unde?</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -300,14 +306,14 @@
       <div class="faq-body page">
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>Where are you located?</h5>
+            <h5>Question 1</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>We operate farms in a number of states across the country but our main operational base is in Edo state, Nigeria. Our administrative office is in Lagos, Nigeria and we have a sales office with warehousing facilities in Meppel, The Netherlands covering our international sales operations.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est facilis iste minima provident deleniti obcaecati voluptatibus eveniet, accusantium, nostrum consequatur commodi impedit porro corporis eligendi delectus dolor iusto harum sed.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -318,14 +324,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>What other benefits?</h5>
+            <h5>Question 2</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>Beyonds the returns that would accrue, participants stand to benefit much more through a host of other initiatives built to promote the growth of Agriculture in Nigeria.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae adipisci aliquam velit eaque mollitia quo asperiores ab fuga id, veniam nesciunt debitis sint quod repellat exercitationem! Qui beatae amet voluptatibus.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
@@ -336,14 +342,14 @@
         </div>
         <div>
           <div class="faq-question" data-ix="faq-open-and-close">
-            <h5>Can I visit the farm locations?</h5>
+            <h5>Question 3</h5>
             <div class="plus-block">
               <div class="plus-icon"></div>
               <div class="minus"></div>
             </div>
           </div>
           <div class="faq-answer" data-ix="faq-answer-on-load">
-            <p>Farm visits are very welcome for participants. Kindly give us a 2 weeks notice prior to intended date of visit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, laborum possimus dignissimos cum reprehenderit debitis rem, magnam deserunt voluptas mollitia porro, quia beatae totam enim excepturi dolore vero quisquam? Nihil.</p>
             <div class="close-faq">
               <div class="plus-block x">
                 <div class="plus-icon"></div>
