--- a/faq.html
+++ b/faq.html
@@ -362,67 +362,47 @@
     </div>
   </div>
   <div class="footer">
-  <div class="footer-top-block">
-    <a href="#" class="footer-logo w-inline-block"></a>
-    <h3 class="w-hidden-tiny">No better time to
-      <br>invest in agriculture</h3>
-    <h3 class="w-hidden-main w-hidden-medium w-hidden-small">No better time to invest in agriculture</h3>
-    <a href="#" class="button orange top-padding w-button" id="footer-time-link"></a>
-  </div>
-  <div class="footer-second-inner">
-    <div>
-      <a href="index.html" class="footer-link w-inline-block w--current">
-        <h6>Home</h6>
+      <div class="footer-top-block">
+        <a href="#" class="footer-logo w-inline-block"></a>
+        <h3 class="w-hidden-tiny">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <a href="products.html" class="button orange top-padding w-button">Our Products</a>
+      </div>
+      <div class="footer-second-inner">
+        <div>
+          <a href="index.html" class="footer-link w-inline-block w--current">
+            <h6>Home</h6>
+          </a>
+          <a href="about.html" class="footer-link w-inline-block">
+            <h6>About</h6>
+          </a>
+          <a href="products.html" class="footer-link w-inline-block">
+            <h6>Our Products</h6>
+          </a>
+          <a href="faq.html" class="footer-link w-inline-block">
+            <h6>FAQ</h6>
+          </a>
+          <a href="contact.html" class="footer-link w-inline-block">
+            <h6>Contact Us</h6>
+          </a>
+        </div>
+        <div class="footer-right-align">
+          <h6 class="lemon-green-text">Powered by</h6>
+          <a href="https://patricksfoods.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
+        </div>
+      </div>
+      <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block"
+        title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
       </a>
-      <a href="about.html" class="footer-link w-inline-block">
-        <h6>About</h6>
-      </a>
-      <a href="why-agropartnerships.html" class="footer-link w-inline-block">
-        <h6>WHY AGROPARTNERSHIPS</h6>
-      </a>
-      <a href="investments.html" class="footer-link w-inline-block">
-        <h6>FARMS/COMMODITIES</h6>
-      </a>
-      <a href="faq.html" class="footer-link w-inline-block">
-        <h6>FAQ</h6>
-      </a>
-      <a href="help-desk.html" class="footer-link w-inline-block">
-        <h6>Help desk</h6>
-      </a>
-      <a href="legal.html" class="footer-link w-inline-block">
-        <h6>Legal</h6>
-      </a>
+      <div>
+        <div class="white-text _50 copyright-text">
+          <div class="w-embed w-script">© Copyright
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script> Patrick's Food Ltd.</div>
+        </div>
+      </div>
     </div>
-    <div class="footer-right-align">
-      <h6 class="lemon-green-text">Powered by</h6>
-      <a href="http://farmforte.com/" target="_blank" class="farmforte-logo w-inline-block"></a>
-    </div>
-  </div>
-  <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block" title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
-  </a>
-  <div>
-    <div class="white-text _50 copyright-text">
-      <div class="w-embed w-script">© Copyright
-        <script type="text/javascript">document.write(new Date().getFullYear());</script> Agropartnerships Technology Ltd. A Farmforte Subsidiary.</div>
-    </div>
-  </div>
-</div>
-<script>
-  var footerTimeLink = document.getElementById("footer-time-link");
-  if (authBot.getToken()) {
-    footerTimeLink.href = 'investments.html';
-    footerTimeLink.textContent = "View Opportunities";
 
-    var hideNodes = document.getElementsByClassName('signed-in-hide');
-    for (var i = 0; i < hideNodes.length; i++) {
-      hideNodes[i].style.display = 'none';
-    }
-  }
-  else {
-    footerTimeLink.href = 'sign-up.html';
-    footerTimeLink.textContent = "Start now";
-  }
-</script>
 
   <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="js/style.js" type="text/javascript"></script>
