--- a/our-focus.html
+++ b/our-focus.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<!--  Last Published: Thu Jun 07 2018 03:16:34 GMT+0000 (UTC)  -->
 <html data-wf-page="5af08139e8ac1e59e8208d92" data-wf-site="5aec5659e4867c546a4da688">
-
-<!-- Mirrored from agropartnerships.co/why-agropartnerships by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:29 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <meta charset="utf-8">
-  <title>Why Agropartnerships | A Digital Platform for Agribusiness</title>
-  <meta content="A simple, risk free and profitable program perfect for people looking to engage in Agriculture but don&#x27;t have the knowledge, capacity or time" name="description">
-  <meta content="Why Agropartnerships | A Digital Platform for Agribusiness" property="og:title">
-  <meta content="A simple, risk free and profitable program perfect for people looking to engage in Agriculture but don&#x27;t have the knowledge, capacity or time" property="og:description">
+  <title>Our Focus | The Healthy Food Stack</title>
+  <meta content="" name="description">
+  <meta content="Our Focus | The Healthy Food Stack" property="og:title">
+  <meta content="" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
