focus - hero bg

--- a/our-focus.html
+++ b/our-focus.html
@@ -121,7 +121,7 @@
 
   <div class="hero why-ap" data-ix="sticky-header">
     <div class="curl green"></div>
-    <h2 class="white-text">Why<br>Agropartnerships?</h2>
+    <h2 class="white-text">Why Fresh?</h2>
   </div>
   <div class="why-ap-body">
     <div>
@@ -131,10 +131,10 @@
             <h5>Model</h5>
           </a>
           <a data-w-tab="Tech" class="tab-link-type2 w-inline-block w-tab-link">
-            <h5>TECH</h5>
+            <h5>Value</h5>
           </a>
           <a data-w-tab="Returns" class="tab-link-type2 w-inline-block w-tab-link">
-            <h5>RETURNS</h5>
+            <h5>Facts</h5>
           </a>
         </div>
         <div class="tab-content-type2 w-tab-content">
@@ -150,8 +150,8 @@
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">A core focus/key component of our business model is playing across the value chain of specific product types we work with. We take seeds and nurture them into beautiful crops that produce a bountiful harvest which is then processed and packaged into world class products that are sold locally and across the globe.</h5>
-                  <p class="small-paragraph top-padding white-text">By playing across the value chain, we take out the middlemen and provide consumers with the best quality at the best prices and still make excellent profits.</p>
+                  <h5 class="white-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, sequi fuga non possimus vero et accusantium quae corporis alias odio, facilis sapiente amet, mollitia iusto ex assumenda magni aliquid. Cumque?</h5>
+                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque accusamus veritatis molestiae, quaerat ea eveniet vel fugit debitis, molestias blanditiis facere nesciunt fuga cumque provident explicabo incidunt quidem officia nobis.</p>
                 </div>
               </div>
               <div class="tab-menu-bottom">
