--- a/our-focus.html
+++ b/our-focus.html
@@ -167,15 +167,15 @@
               <div class="tab-text-content">
                 <div class="tab-2-sub-head">
                   <div class="sub-head-block">
-                    <h4 class="dark-green-text">Modern <br>Systems</h4>
+                    <h4 class="dark-green-text">Healthy <br>Living</h4>
                   </div>
                   <div class="sub-head-right">
-                    <h5 class="dark-green-text">Mechanized farming at its finest</h5>
+                    <h5 class="dark-green-text">Processed with delicate care</h5>
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">We utilize modern Agricultural systems to ensure high quality and maximum yields. The presence of modern Irrigation systems ensures we can farm all year round both in wet and dry seasons.</h5>
-                  <p class="small-paragraph top-padding white-text">We desire partners who would not just seek returns alone but also be a part of a network of Enlightened Agricultural Enthusiasts seeking to change the face of farming in Nigeria.</p>
+                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor facilis tempora harum mollitia rem veniam vitae dolorem ut odit, explicabo enim earum sed doloremque doloribus eligendi deserunt consequuntur ex tenetur?</h5>
+                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam repellendus velit ea minima exercitationem deserunt, rerum maiores veniam ipsam suscipit, nesciunt ipsum voluptatum optio repudiandae corporis dolor a quis odio.</p>
                 </div>
               </div>
               <div class="farming-img"></div>
@@ -191,14 +191,14 @@
               <div class="tab-text-content">
                 <div class="tab-2-sub-head">
                   <div class="sub-head-block">
-                    <h4 class="dark-green-text">Land <br>Provision</h4>
+                    <h4 class="dark-green-text">Who <br>Provides</h4>
                   </div>
                   <div class="sub-head-right">
-                    <h5 class="dark-green-text">Prepared, planted and harvested on behalf of the participants</h5>
+                    <h5 class="dark-green-text">Lorem ipsum dolor sit</h5>
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">The costs cover everything from Land allocation and preparation, Fertilzer, Plantlets, Labor, Logistics, Insurance, Management, etc.  Returns are calculated by multiplying the pre-determined price per Kilo by the number of Kilos produced per plot.</h5>
+                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, repudiandae asperiores, unde modi nobis in aspernatur quibusdam repellendus eos aperiam neque nostrum placeat, consectetur iste? Temporibus facilis ratione nemo officiis!</h5>
                 </div>
               </div>
               <div class="returns-img"></div>
