--- a/our-focus.html
+++ b/our-focus.html
@@ -213,39 +213,39 @@
       </div>
     </div>
     <div class="why-ap-intro">
-      <h4 class="white-text">While you deploy capital, We provide the Land, Labor, Inputs, Machinery, Management, Expertise and other necessities. Most importantly, we enter Buyout Contracts on all the harvested produce at a predetermined price to enable you get all the benefits</h4>
+      <h4 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, mollitia numquam vel amet aliquam eligendi! Labore, unde recusandae dolores minima excepturi molestiae omnis assumenda velit beatae in eaque obcaecati saepe!</h4>
     </div>
     <div class="why-ap-summary-flex">
       <div class="why-ap-summary-block long">
         <div>
           <div class="why-ap-icon returns"></div>
-          <h4 class="dark-green-text">Healthy Returns</h4>
-          <p class="grey-text">The most profitable farming and commodity trading experience you can think of. Yes, we know!</p>
+          <h4 class="dark-green-text">Healthy</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sequi excepturi commodi. Atque officiis, dolorum obcaecati facere nobis neque! Officiis nihil ducimus rerum pariatur exercitationem cumque porro beatae dicta sunt.</p>
         </div>
         <div class="home-laptop"></div><a href="why-agropartnerships.html" class="button orange w-button w--current">Learn more</a></div>
       <div>
         <div class="why-summary-flex">
           <div class="why-ap-summary-block">
             <div class="why-ap-icon cycle"></div>
-            <h4 class="dark-green-text">Short Cycles</h4>
-            <p class="grey-text">Fast turnaround times ranging from 3 weeks up to 6 months depending on farm or commodity trade type.</p>
+            <h4 class="dark-green-text">Ready</h4>
+            <p class="grey-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores porro illo culpa atque praesentium cumque similique nostrum, temporibus sunt qui quaerat vel eveniet distinctio, quibusdam omnis architecto molestias nemo dolorum.</p>
           </div>
           <div class="why-ap-summary-block">
             <div class="why-ap-icon insurance"></div>
-            <h4 class="dark-green-text">100% insured</h4>
-            <p class="grey-text">We understand that your money is valuable hence all farms, commodities and warehouses are backed by comprehensive insurance providers.</p>
+            <h4 class="dark-green-text">100% </h4>
+            <p class="grey-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus repellendus ullam voluptates non illum, accusamus deserunt libero. Fuga omnis praesentium commodi tempore animi? Earum nemo eveniet, tenetur recusandae numquam facilis.</p>
           </div>
         </div>
         <div class="why-summary-flex">
           <div class="why-ap-summary-block">
             <div class="why-ap-icon cost"></div>
-            <h4 class="dark-green-text">Low Capital</h4>
-            <p class="grey-text">Low minimum investment required per unit, you can start a farm or execute a trade with as low as N80,000</p>
+            <h4 class="dark-green-text">Rich</h4>
+            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione ab repudiandae eos? Molestias nostrum aliquid atque magni consequatur explicabo veniam maxime? Provident magnam iure repellendus nobis mollitia natus optio!</p>
           </div>
           <div class="why-ap-summary-block">
             <div class="why-ap-icon value-chain"></div>
-            <h4 class="dark-green-text">Value Chain Approach</h4>
-            <p class="grey-text">We play across the value chain of every crop or commodity type we choose, cutting out middlemen by providing end to end solutions.</p>
+            <h4 class="dark-green-text">Value Added Approach</h4>
+            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur dolores commodi nesciunt quo doloremque sit vero officiis repellat placeat. Minima cupiditate deleniti autem est ab voluptatibus fugit, voluptas quos.</p>
           </div>
         </div>
       </div>
