--- a/our-focus.html
+++ b/our-focus.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-page="5af08139e8ac1e59e8208d92" data-wf-site="5aec5659e4867c546a4da688">
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+
 <head>
   <meta charset="utf-8">
   <title>Our Focus | The Healthy Food Stack</title>
@@ -13,39 +14,52 @@
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    ! function (o, c) {
+      var n = c.documentElement,
+        t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
+        t + "touch")
+    }(window, document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
-    ::-moz-selection { /* Firefox */
-        color: #1d3b2d;
-        background: #8dc63f;
+    ::-moz-selection {
+      /* Firefox */
+      color: #1d3b2d;
+      background: #8dc63f;
     }
+
     ::selection {
-        color: #1d3b2d;
-        background: #8dc63f;
+      color: #1d3b2d;
+      background: #8dc63f;
     }
-</style>
+  </style>
 
 
-<script>
-	// Vue Mixin List
-	var mixinList = [];
-</script>
+  <script>
+    // Vue Mixin List
+    var mixinList = [];
+  </script>
 </head>
+
 <body>
   <script src="js/utilities.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130165432-"></script>
-<script>
- window.dataLayer = window.dataLayer || [];
- function gtag(){dataLayer.push(arguments);}
- gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130165432-"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
- gtag('config', 'UA-130165432-');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-<div class="header" id="header" style="display: none">
+    gtag('config', 'UA-130165432-');
+  </script>
+
+  <div class="header" id="header" style="display: none">
     <div class="header-on-scroll">
       <div class="header-flex">
         <div class="menu-button" data-ix="open-menu">
@@ -108,15 +122,16 @@
       </div><a href="index.html" class="home-logo w-inline-block header-menu"></a>
     </div>
   </div>
-  
+
   <script>
-  document.getElementById('header').style.display = 'flex';
-  var menuLinks = document.getElementsByClassName('header-menu');
-  for(var i = 0; i < menuLinks.length; i++){
-    if((menuLinks[i].getAttribute('href') == window.location.pathname) || (menuLinks[i].getAttribute('href') == "/index" && window.location.pathname == "index.html")){
-      menuLinks[i].classList.add('w--current');
+    document.getElementById('header').style.display = 'flex';
+    var menuLinks = document.getElementsByClassName('header-menu');
+    for (var i = 0; i < menuLinks.length; i++) {
+      if ((menuLinks[i].getAttribute('href') == window.location.pathname) || (menuLinks[i].getAttribute('href') ==
+          "/index" && window.location.pathname == "index.html")) {
+        menuLinks[i].classList.add('w--current');
+      }
     }
-  }
   </script>
 
   <div class="hero why-ap" data-ix="sticky-header">
@@ -150,8 +165,12 @@
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, sequi fuga non possimus vero et accusantium quae corporis alias odio, facilis sapiente amet, mollitia iusto ex assumenda magni aliquid. Cumque?</h5>
-                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque accusamus veritatis molestiae, quaerat ea eveniet vel fugit debitis, molestias blanditiis facere nesciunt fuga cumque provident explicabo incidunt quidem officia nobis.</p>
+                  <h5 class="white-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, sequi
+                    fuga non possimus vero et accusantium quae corporis alias odio, facilis sapiente amet, mollitia
+                    iusto ex assumenda magni aliquid. Cumque?</h5>
+                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Eaque accusamus veritatis molestiae, quaerat ea eveniet vel fugit debitis, molestias
+                    blanditiis facere nesciunt fuga cumque provident explicabo incidunt quidem officia nobis.</p>
                 </div>
               </div>
               <div class="tab-menu-bottom">
@@ -174,8 +193,12 @@
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor facilis tempora harum mollitia rem veniam vitae dolorem ut odit, explicabo enim earum sed doloremque doloribus eligendi deserunt consequuntur ex tenetur?</h5>
-                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam repellendus velit ea minima exercitationem deserunt, rerum maiores veniam ipsam suscipit, nesciunt ipsum voluptatum optio repudiandae corporis dolor a quis odio.</p>
+                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor facilis tempora
+                    harum mollitia rem veniam vitae dolorem ut odit, explicabo enim earum sed doloremque doloribus
+                    eligendi deserunt consequuntur ex tenetur?</h5>
+                  <p class="small-paragraph top-padding white-text">Lorem ipsum dolor sit amet consectetur, adipisicing
+                    elit. Numquam repellendus velit ea minima exercitationem deserunt, rerum maiores veniam ipsam
+                    suscipit, nesciunt ipsum voluptatum optio repudiandae corporis dolor a quis odio.</p>
                 </div>
               </div>
               <div class="farming-img"></div>
@@ -198,7 +221,9 @@
                   </div>
                 </div>
                 <div>
-                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, repudiandae asperiores, unde modi nobis in aspernatur quibusdam repellendus eos aperiam neque nostrum placeat, consectetur iste? Temporibus facilis ratione nemo officiis!</h5>
+                  <h5 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, repudiandae
+                    asperiores, unde modi nobis in aspernatur quibusdam repellendus eos aperiam neque nostrum placeat,
+                    consectetur iste? Temporibus facilis ratione nemo officiis!</h5>
                 </div>
               </div>
               <div class="returns-img"></div>
@@ -213,39 +238,53 @@
       </div>
     </div>
     <div class="why-ap-intro">
-      <h4 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, mollitia numquam vel amet aliquam eligendi! Labore, unde recusandae dolores minima excepturi molestiae omnis assumenda velit beatae in eaque obcaecati saepe!</h4>
+      <h4 class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, mollitia numquam vel
+        amet aliquam eligendi! Labore, unde recusandae dolores minima excepturi molestiae omnis assumenda velit beatae
+        in eaque obcaecati saepe!</h4>
     </div>
     <div class="why-ap-summary-flex">
       <div class="why-ap-summary-block long">
         <div>
           <div class="why-ap-icon returns"></div>
           <h4 class="dark-green-text">Healthy</h4>
-          <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sequi excepturi commodi. Atque officiis, dolorum obcaecati facere nobis neque! Officiis nihil ducimus rerum pariatur exercitationem cumque porro beatae dicta sunt.</p>
+          <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sequi excepturi
+            commodi. Atque officiis, dolorum obcaecati facere nobis neque! Officiis nihil ducimus rerum pariatur
+            exercitationem cumque porro beatae dicta sunt.</p>
         </div>
-        <div class="home-laptop"></div><a href="why-agropartnerships.html" class="button orange w-button w--current">Learn more</a></div>
+        <div class="home-laptop"></div><a href="why-agropartnerships.html"
+          class="button orange w-button w--current">Learn more</a>
+      </div>
       <div>
         <div class="why-summary-flex">
           <div class="why-ap-summary-block">
             <div class="why-ap-icon cycle"></div>
             <h4 class="dark-green-text">Ready</h4>
-            <p class="grey-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores porro illo culpa atque praesentium cumque similique nostrum, temporibus sunt qui quaerat vel eveniet distinctio, quibusdam omnis architecto molestias nemo dolorum.</p>
+            <p class="grey-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores porro illo culpa
+              atque praesentium cumque similique nostrum, temporibus sunt qui quaerat vel eveniet distinctio, quibusdam
+              omnis architecto molestias nemo dolorum.</p>
           </div>
           <div class="why-ap-summary-block">
             <div class="why-ap-icon insurance"></div>
             <h4 class="dark-green-text">100% </h4>
-            <p class="grey-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus repellendus ullam voluptates non illum, accusamus deserunt libero. Fuga omnis praesentium commodi tempore animi? Earum nemo eveniet, tenetur recusandae numquam facilis.</p>
+            <p class="grey-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus repellendus
+              ullam voluptates non illum, accusamus deserunt libero. Fuga omnis praesentium commodi tempore animi? Earum
+              nemo eveniet, tenetur recusandae numquam facilis.</p>
           </div>
         </div>
         <div class="why-summary-flex">
           <div class="why-ap-summary-block">
             <div class="why-ap-icon cost"></div>
             <h4 class="dark-green-text">Rich</h4>
-            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione ab repudiandae eos? Molestias nostrum aliquid atque magni consequatur explicabo veniam maxime? Provident magnam iure repellendus nobis mollitia natus optio!</p>
+            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione ab repudiandae
+              eos? Molestias nostrum aliquid atque magni consequatur explicabo veniam maxime? Provident magnam iure
+              repellendus nobis mollitia natus optio!</p>
           </div>
           <div class="why-ap-summary-block">
             <div class="why-ap-icon value-chain"></div>
             <h4 class="dark-green-text">Value Added Approach</h4>
-            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur dolores commodi nesciunt quo doloremque sit vero officiis repellat placeat. Minima cupiditate deleniti autem est ab voluptatibus fugit, voluptas quos.</p>
+            <p class="grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur dolores
+              commodi nesciunt quo doloremque sit vero officiis repellat placeat. Minima cupiditate deleniti autem est
+              ab voluptatibus fugit, voluptas quos.</p>
           </div>
         </div>
       </div>
@@ -292,12 +331,9 @@
       </div>
     </div>
   </div>
-
-
   <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="js/style.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
-<!-- Mirrored from agropartnerships.co/why-agropartnerships by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:29 GMT -->
 </html>
