focus - intro button

--- a/our-focus.html
+++ b/our-focus.html
@@ -251,8 +251,8 @@
             commodi. Atque officiis, dolorum obcaecati facere nobis neque! Officiis nihil ducimus rerum pariatur
             exercitationem cumque porro beatae dicta sunt.</p>
         </div>
-        <div class="home-laptop"></div><a href="why-agropartnerships.html"
-          class="button orange w-button w--current">Learn more</a>
+        <div class="home-laptop"></div><a href="about.html"
+          class="button orange w-button w--current">About Us</a>
       </div>
       <div>
         <div class="why-summary-flex">
