--- a/products.html
+++ b/products.html
@@ -6,10 +6,10 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
-  <title>Farms &amp; Commodities | Agropartnerships</title>
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." name="description">
-  <meta content="Farms &amp; Commodities | Agropartnerships" property="og:title">
-  <meta content="An innovative digital platform that gives everyone the opportunity to engage in Agribusiness anytime and on the go, by funding farms and facilitating trades of agricultural commodities." property="og:description">
+  <title>Our Products | The Healthy Food Stack</title>
+  <meta content="" name="description">
+  <meta content="Our Products | The Healthy Food Stack" property="og:title">
+  <meta content="" property="og:description">
   <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
