products - header title

--- a/products.html
+++ b/products.html
@@ -128,8 +128,8 @@
 
   <div class="hero solid-color farms" data-ix="sticky-header">
     <div class="curl white"></div>
-    <h1 class="white-text w-hidden-tiny">Farms &amp; Commodities</h1>
-    <h2 class="white-text w-hidden-main w-hidden-medium w-hidden-small">Farms &amp; Commodities</h2>
+    <h1 class="white-text w-hidden-tiny">Products &amp; Stocks</h1>
+    <h2 class="white-text w-hidden-main w-hidden-medium w-hidden-small">Products &amp; Stocks</h2>
   </div>
   <div class="farm-body">
     <div class="filter-wrapper">
