--- a/products.html
+++ b/products.html
@@ -157,11 +157,11 @@
             
             <h3 class="white-text no-padding">commodity</h3>
           </div>
-          <h2 class="white-text">Sesame Seeds - 02</h2>
+          <h2 class="white-text">Snail - 500g</h2>
         </div>
         <div class="farm-inner-block">
           <div>
-            <h5 class="white-text">₦95,000.00</h5>
+            <h5 class="white-text">₦3,000.00</h5>
             <h6 class="orange-text">per unit</h6>
           </div>
           <div class="preview-yield-block main-page">
