--- a/products.html
+++ b/products.html
@@ -170,7 +170,7 @@
           </div>
           
             <div class="sold-out">
-              <h6 class="light-green-text no-padding">Sold out</h6>
+              <h6 class="light-green-text no-padding">In stock</h6>
             </div>
           
         </div>
