--- a/products.html
+++ b/products.html
@@ -189,7 +189,7 @@
         </div>
         <div class="farm-inner-block">
           <div>
-            <h5 class="white-text">₦95,000.00</h5>
+            <h5 class="white-text">₦5,000.00</h5>
             <h6 class="orange-text">per unit</h6>
           </div>
           <div class="preview-yield-block main-page">
@@ -217,7 +217,7 @@
         </div>
         <div class="farm-inner-block">
           <div>
-            <h5 class="white-text">₦96,000.00</h5>
+            <h5 class="white-text">₦6,000.00</h5>
             <h6 class="orange-text">per unit</h6>
           </div>
           <div class="preview-yield-block main-page">
@@ -226,7 +226,7 @@
           </div>
           
             <div class="sold-out">
-              <h6 class="light-green-text no-padding">Sold out</h6>
+              <h6 class="light-green-text no-padding">In stock</h6>
             </div>
           
         </div>
@@ -245,7 +245,7 @@
         </div>
         <div class="farm-inner-block">
           <div>
-            <h5 class="white-text">₦95,000.00</h5>
+            <h5 class="white-text">₦4,000.00</h5>
             <h6 class="orange-text">per unit</h6>
           </div>
           <div class="preview-yield-block main-page">
