--- a/products.html
+++ b/products.html
@@ -431,7 +431,7 @@
       </div>
     </div>
     <a href="http://check-dc.com/" target="_blank" class="check-logo w-inline-block"
-      title="Check DC : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
+      title="TalentBox Concept : A Lagos based design agency focused on Brand Identity, Website design and Digital Marketing.">
     </a>
     <div>
       <div class="white-text _50 copyright-text">
