--- a/products.html
+++ b/products.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Jun 03 2018 15:07:11 GMT+0000 (UTC)  -->
 <html data-wf-page="5aeef50c9cabc32da0a51fd0" data-wf-site="5aec5659e4867c546a4da688">
-
-<!-- Mirrored from agropartnerships.co/investments by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2019 11:08:30 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <meta charset="utf-8">
   <title>Our Products | The Healthy Food Stack</title>
@@ -30,9 +27,6 @@
     }
 </style>
 <script src="js/utilities.js"></script>
-<!-- <script>
-  if(!authBot.getToken()) goToLoginPrompt();
-</script> -->
 
 
 <script>
